Fix Loading Spinner Align

--- a/src/components/layout/loading/SignInLoadingPage/SignInLoadingPage.module.css
+++ b/src/components/layout/loading/SignInLoadingPage/SignInLoadingPage.module.css
@@ -8,4 +8,16 @@
 .loading {
     font-size: 22px;
     opacity: 0.8;
+    margin: 0;
+    text-align: center;
 }
+
+
+.loadingSection {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+}
+
